@@ -2,7 +2,7 @@ Title: Survival analysis, including penalised likelihood.
 Maintainer: Terry Therneau <therneau.terry@mayo.edu>
 Priority: recommended
 Package: survival
-Version: 2.36-4
+Version: 2.36-5
 Date: 2011-02-01
 Depends: stats, utils, graphics, splines, R (>= 2.10.0)
 LazyData: Yes
@@ -14,6 +14,6 @@ Description: survival analysis: descriptive statistics, two-sample
         censoring for parametric models. Case-cohort designs.
 License: GPL (>= 2)
 URL: http://r-forge.r-project.org
-Packaged: 2011-02-17 17:10:20 UTC; therneau
+Packaged: 2011-02-21 15:16:07 UTC; therneau
 Repository: CRAN
-Date/Publication: 2011-02-18 07:27:01
+Date/Publication: 2011-02-21 16:20:01
